--- a/flaskapp/templates/search.html
+++ b/flaskapp/templates/search.html
@@ -1,28 +1,38 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Search Results</title>
-</head>
-<body>
-	<table>
-		<thead>
-			<tr>
-				<th>ID</th>
-				<th>Score</th>
-				<th>Name</th>
-				<th>Abstract</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for result in results %}
-			<tr>
-				<td>{{ result['id'] }}</td>
-				<td>{{ result['score'] }}</td>
-				<td>{{ result['name'] }}</td>
-				<td>{{ result['abstract'] }}</td>
-			</tr>
-			{% endfor %}
-		</tbody>
-	</table>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<form id="search-form" action="/search" method="get">
+    <div>
+      <input type="text" id="search-bar" name="q" value="{{query}}">
+      <button type="submit" id="search-btn">Search</button>
+    </div>
+  </form>
+{% for result in results %}
+<div class="result">
+	<h4>{{ result.link|safe }}</h4>
+	<p>{{ result.abstract }}</p>
+</div>
+{% endfor %}
+
+{% if num_pages > 1 %}
+<nav>
+	<ul class="pagination">
+		{% if current_page > 1 %}
+		<li class="page-item"><a class="page-link" href="?q={{ query }}&page={{ current_page - 1 }}">Previous</a></li>
+		{% endif %}
+		{% for page_num in range(1, num_pages + 1) %}
+		{% if page_num == current_page %}
+		<li class="page-item active"><a class="page-link" href="?q={{ query }}&page={{ page_num }}">{{ page_num }}</a>
+		</li>
+		{% else %}
+		<li class="page-item"><a class="page-link" href="?q={{ query }}&page={{ page_num }}">{{ page_num }}</a></li>
+		{% endif %}
+		{% endfor %}
+
+		{% if current_page < num_pages %} <li class="page-item"><a class="page-link"
+				href="?q={{ query }}&page={{ current_page + 1 }}">Next</a></li>
+			{% endif %}
+	</ul>
+</nav>
+{% endif %}
+{% endblock %}
