--- a/flaskapp/templates/search.html
+++ b/flaskapp/templates/search.html
@@ -1,19 +1,103 @@
-{% extends 'base.html' %}
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{% block content %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+ZjCPTaHmTVHmXzOusvlgsoDgqzumpn" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+    <title>Search Results</title>
+
+    <style>
+        h1>a{
+            text-decoration: none;
+            color: #4CAF50;
+        }
+
+        #search-bar {
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        box-shadow: 0 1px 1px rgba(0,0,0,.075) inset;
+        font-size: 16px;
+        margin: 10px;
+        padding: 6px 10px;
+        width: 400px;
+        }
+
+        #search-btn {
+        background-color: #4CAF50;
+        border: none;
+        border-radius: 3px;
+        color: #fff;
+        cursor: pointer;
+        font-size: 16px;
+        margin: 10px;
+        padding: 6px 12px;
+        }
+        .pagination{
+            overflow: scroll;
+        }
+        .result{
+            padding: 5px;
+            width: 100%;
+        }
+        #wordcloud {
+  position: relative;
+  height: 500px;
+  padding: 20px;
+}
+
+.word {
+  position: absolute;
+  top: calc(50% - 1em);
+  left: calc(50% - 2em);
+  font-size: 1em;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  transform-origin: center center;
+}
+
+.word:hover {
+  transform: scale(1.2) rotate(0deg);
+  z-index: 2;
+}
+
+.word:first-letter {
+  text-transform: uppercase;
+}
+
+    </style>
+  </head>
+  <body>
+    <div class="container mt-3">
+        <h1>
+        <a class="navbar-brand" href="/">IR System for Lawyers</a>
+    </h1>
 <form id="search-form" action="/search" method="get">
     <div>
       <input type="text" id="search-bar" name="q" value="{{query}}">
       <button type="submit" id="search-btn">Search</button>
     </div>
   </form>
+  <div>
+  <div id="wordcloud">
+	{% for word, freq in word_dict.items() %}
+	  <span class="word {{ word }}" style="font-size: {{ freq|round|int }}px; color: rgb({{ colors[word][0] }}, {{ colors[word][1] }}, {{ colors[word][2] }});">
+		{{ word }}
+	  </span>
+	{% endfor %}
+  </div>
+</div>
 {% for result in results %}
 <div class="result">
 	<h4>{{ result.link|safe }}</h4>
 	<p>{{ result.abstract }}</p>
 </div>
 {% endfor %}
-
 {% if num_pages > 1 %}
 <nav>
 	<ul class="pagination">
@@ -35,4 +119,31 @@
 	</ul>
 </nav>
 {% endif %}
-{% endblock %}
+</div>
+<script>
+	var words = document.querySelectorAll('.word');
+  for (var i = 0; i < words.length; i++) {
+    var word = words[i];
+    var randomX = Math.floor(Math.random() * 1200) - 200;
+    var randomY = Math.floor(Math.random() * 400) - 200;
+    word.style.top = 200 + randomY + 'px';
+    word.style.left = 200 + randomX + 'px';
+    word.style.fontSize = Math.floor(Math.random() * 4) + 1 + 'em';
+  }
+  const wordcloud = document.querySelector('#wordcloud');
+  wordcloud.addEventListener('click', (event) => {
+	if (event.target.classList.contains('word')) {
+	const word = event.target.textContent.trim();
+	const queryBox = document.querySelector('#search-bar');
+	queryBox.value += ` ${word}`;
+	}
+  });
+
+</script>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+ZjCPTaHmTVHmXzOusvlgsoDgqzumpn" crossorigin="anonymous"></script>
+</body>
+</html>
